--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "functions-framework --target=api --port=8080",
+    "start": "node index.js",
     "dev": "nodemon index.js"
   },
   "dependencies": {
