--- a/backend/package.json
+++ b/backend/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "functions-framework --target=api",
-    "dev": "nodemon index.js"
+  "start": "node server.js",
+  "dev": "nodemon server.js"
   },
   "dependencies": {
     "@google-cloud/functions-framework": "^3.4.0",
