--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.0.0",
  "scripts": {
   "ng": "ng",
-  "start": "node server.js",
-  "build": "node --max_old_space_size=8192 ./node_modules/@angular/cli/bin/ng build",
-  "watch": "ng watch",
-  "test": "ng test"
+  "start": "ng serve",
+  "build": "ng build",
+  "test": "ng test",
+  "lint": "ng lint",
+  "e2e": "ng e2e"
 },
   "prettier": {
     "overrides": [
