--- a/backend/package.json
+++ b/backend/package.json
@@ -7,14 +7,18 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "@google-cloud/storage": "^7.12.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "express": "^4.21.2",
     "firebase-admin": "^13.5.0",
-    "node-fetch": "^2.7.0",
-    "@google-cloud/storage": "^7.12.1"
+    "node-fetch": "^2.7.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
-  }
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
