--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express": "^5.1.0",
     "file-saver": "^2.0.5",
     "firebase": "^11.10.0",
+    "gapi-script": "^1.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "xlsx": "^0.18.5",
@@ -44,6 +45,7 @@
     "@angular/cli": "^20.1.5",
     "@angular/compiler-cli": "^20.1.0",
     "@types/file-saver": "^2.0.7",
+    "@types/google-one-tap": "^1.2.6",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.8.0",
     "karma": "~6.4.0",
