--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.2",
     "firebase-admin": "^13.5.0",
-    "node-fetch": "^2.7.0"
+    "node-fetch": "^2.7.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
